<?xml version="1.0"?>
<package format="2">
  <name>pilz_control</name>
  <version>0.6.0</version>
  <description>
  This package provides a specialized joint_trajectory_controller that can be moved into holding state via service call.
  No further trajectories will be accepted/followed in this state.
  </description>

  <url type="website">http://ros.org/wiki/pilz_control</url>
  <url type="bugtracker">https://github.com/PilzDE/pilz_robots/issues</url>
  <url type="repository">https://github.com/PilzDE/pilz_robots</url>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="c.henkel@pilz.de">Christian Henkel</maintainer>
  <maintainer email="h.slusarek@pilz.de">Hagen Slusarek</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roslint</build_depend>

  <depend>roscpp</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>std_srvs</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend> <!-- Needed for the plugin export -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pilz_msgs</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>code_coverage</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>tf2</test_depend>
  <test_depend>tf2_geometry_msgs</test_depend>
  <test_depend>pilz_utils</test_depend>
  <test_depend>pilz_testutils</test_depend>

  <export>
    <controller_interface plugin="${prefix}/pilz_control_plugins.xml"/>
  </export>
</package>
