<package format="2">
  <name>pilz_robots</name>
  <version>0.2.0</version>
  <description>The metapackage</description>

  <url type="website">http://ros.org/wiki/pilz_robots</url>

  <maintainer email="ros@pilz.de">Pilz GmbH and Co. KG</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>prbt_support</exec_depend>
  <exec_depend>prbt_ikfast_manipulator_plugin</exec_depend>
  <exec_depend>prbt_moveit_config</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>
</package>
