<package format="2">
  <name>pilz_robots</name>
  <version>0.4.8</version>
  <description>The metapackage</description>

  <url type="website">http://ros.org/wiki/pilz_robots</url>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="h.slusarek@pilz.de">Hagen Slusarek</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://wiki.ros.org/pilz_robots</url>
  <url type="bugtracker">https://github.com/PilzDE/pilz_robots/issues</url>
  <url type="repository">https://github.com/PilzDE/pilz_robots</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>prbt_support</exec_depend>
  <exec_depend>prbt_ikfast_manipulator_plugin</exec_depend>
  <exec_depend>prbt_moveit_config</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>
</package>
