<?xml version="1.0"?>
<package format="3">
  <name>pilz_status_indicator_rqt</name>
  <version>0.6.0</version>
  <description>Showing information about operation mode, status and speed override of the robot.</description>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="c.henkel@pilz.de">Christian Henkel</maintainer>
  <maintainer email="h.slusarek@pilz.de">Hagen Slusarek</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>

  <license>Apache 2.0</license>

  <url type="bugtracker">https://github.com/PilzDE/pilz_robots/issues</url>
  <url type="repository">https://github.com/PilzDE/pilz_robots</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pilz_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>

  <test_depend>rostest</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-mock</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-mock</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
